--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <nav class="nav-header">
@@ -29,7 +33,7 @@
         <li><a href="#home">Home</a></li>
 				<li><a href="#about">About Us</a></li>
 				<li><a href="#gallery">Gallery</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a href="book-now.html">Contact</a></li>
       </ul>
     </nav>
 
@@ -155,18 +159,23 @@
 				<p class="review-p">What our guests say</p>
 			</div>
 
-			<div class="review">
-				<p class="star">⭐⭐⭐⭐⭐</p>
-        <p class="review">"An amazing stay! The apartment was spotless, beautifully designed, and had everything I needed. Will definitely be back!"</p>
-        <p class="author1">– Sarah O.</p>
-        
-        <p class="star">⭐⭐⭐⭐⭐</p>
-        <p class="review">"The perfect mix of luxury and affordability. Highly recommend for anyone visiting Abuja!"</p>
-        <p class="author">– David K.</p>
-			</div>
+			<div class="reviews">
+				<div class="review">
+						<p class="star">⭐⭐⭐⭐⭐</p>
+						<p class="review-text">"An amazing stay! The apartment was spotless, beautifully designed, and had everything I needed. Will definitely be back!"</p>
+						<p class="author">– Sarah O.</p>
+				</div>
+		
+				<div class="review">
+						<p class="star">⭐⭐⭐⭐⭐</p>
+						<p class="review-text">"The perfect mix of luxury and affordability. Highly recommend for anyone visiting Abuja!"</p>
+						<p class="author">– David K.</p>
+				</div>
+		</div>
+		
 		</section>
 
-    <section id="contact">
+   <!-- <section id="contact">
       <div class="form-container">
         <h2>Contact Us for More Information</h2>
         <form action="https://formsubmit.co/desireluxuryhomes@gmail.com" method="POST">
@@ -179,7 +188,7 @@
             <button type="submit">Send Inquiry</button>
         </form>
     </div>
-    </section>
+    </section> -->
 
 		<footer class="footer">
 			<div>
